2001-08-23  Andreas Jaeger  <aj@suse.de>

	* elf64-x86-64.c (elf64_x86_64_check_relocs): Set DF_TEXTREL if
	the reloc is against read-only section.
	(elf64_x86_64_size_dynamic_sections): Use DF_TEXTREL flag instead
	of looking up section names for DT_TEXTREL.
	(elf64_x86_64_reloc_type_class): New.
	(elf_backend_reloc_type_class): Define.

2001-08-23  H.J. Lu  <hjl@gnu.org>

	* syms.c (bfd_print_symbol_vandf): Add abfd to arg.
	* bfd-in2.h (bfd_print_symbol_vandf): Regenerated.

	* aoutx.h (NAME(aout,print_symbol)): Pass abfd to
	bfd_print_symbol_vandf.
	* coffgen.c (coff_print_symbol): Likewise.
	* elf.c (bfd_elf_print_symbol): Likewise.
	* ieee.c (ieee_print_symbol): Likewise.
	* nlmcode.h (nlm_print_symbol): Likewise.
	* oasys.c (oasys_print_symbol): Likewise.
	* pdp11.c (NAME(aout,print_symbol)): Likewise.
	* som.c (som_print_symbol): Likewise.
	* srec.c (srec_print_symbol): Likewise.
	* tekhex.c (tekhex_print_symbol): Likewise.
	* versados.c (versados_print_symbol): Likewise.
	* vms.c (vms_print_symbol): Likewise.

	* elf.c (_bfd_elf_print_private_bfd_data): Replace fprintf_vma
	with bfd_fprintf_vma.
	(bfd_elf_print_symbol): Likewise.
	* syms.c (bfd_print_symbol_vandf): Likewise.

2001-08-23  Nick Clifton  <nickc@cambridge.redhat.com>

	* aoutf1.h (sunos_write_object_contents): Silence compile time
	warning.
        * libaout.h (N_SET_DYNAMIC): Silence compile time warning.

	* bout.c: Add missing function prototypes.  Fix formatting.
	* coff-z8k.c: Add missing function prototypes.  Fix formatting.
	* coff-w65.c: Add missing function prototypes.  Fix formatting.
	* coff-h8500.c: Add missing function prototypes.  Fix formatting.
	* coff-h8300.c: Add missing function prototypes.  Fix formatting.
	* coff-tic54x.c: Add missing function prototypes.  Fix formatting.
	* coff-tic30.c: Add missing function prototypes.  Fix formatting.
	* coff-m68k.c: Add missing function prototypes.  Fix formatting.
	* coff-rs6000.c: Add missing function prototypes.  Fix formatting.