@@ -1,3 +1,8 @@
+2001-08-24  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
+
+	* linker.c (_bfd_generic_link_add_archive_symbols): Replace alloca()
+	by bfd_malloc().
+
 2001-08-23  Andreas Jaeger  <aj@suse.de>
 
 	* elf64-x86-64.c (elf64_x86_64_check_relocs): Set DF_TEXTREL if
